==> huhu10010411/BSR-STM32CBT6/Core/Src/Device/ds3231.c <==
/*
 * ds3231.c
 *
 *  Created on: Nov 6, 2023
 *      Author: Admin
 */

#include "stm32f1xx_hal.h"
#include "ds3231.h"


#define DS3231_ADDR  (0x68 << 1)

_RTC myRTC;

I2C_HandleTypeDef *i2c;

static uint8_t B2D(uint8_t bcd);
static uint8_t D2B(uint8_t decimal);

void DS3231_Init(I2C_HandleTypeDef *handle)
{
  i2c = handle;
  DS3231_ClearAlarm1();
}
void epochtine2RTC(time_t epochtime,  _RTC *myRTC)
{
	struct tm *info;
	info = localtime(&epochtime);
	myRTC->Year = info->tm_year -100;
	myRTC->Month =  info->tm_mon +1;
	myRTC->Date = info->tm_mday;
	myRTC->DaysOfWeek = info->tm_wday + 1;
	myRTC->Hour = info->tm_hour + 7;
	myRTC->Min = info->tm_min;
	myRTC->Sec = info->tm_sec;
}

time_t RTC2epochtime (_RTC *RTCtime)
{
	struct tm t;
	time_t epochtime;
	t.tm_year = 2000 + RTCtime->Year -1900;
	t.tm_mon = RTCtime->Month - 1;
	t.tm_mday = RTCtime->Date;
	t.tm_hour = RTCtime->Hour - 7;
	t.tm_min = RTCtime->Min;
	t.tm_sec = RTCtime->Sec;
	t.tm_isdst = -1;
	epochtime = mktime(&t);
	return epochtime;
}

bool Leapyear_validation (uint16_t year)
{
	bool res = false;
	if (year % 400 == 0)	{
		res = true;
	}
   // not a leap year if divisible by 100
   // but not divisible by 400
   else if (year % 100 == 0) {
	   res = false;
   }
   // leap year if not divisible by 100
   // but divisible by 4
   else if (year % 4 == 0) {
	   res = true;
   }
   // all other years are not leap years
   else {
	   res = false;
   }
	return res;
}
bool Time_validation(_RTC rtc)
{
	if ( (rtc.Sec < 0) || (rtc.Sec >59 ) )	return false;
	if ( (rtc.Min < 0) || (rtc.Min >59 ) )	return false;
	if ( (rtc.Hour < 0) || (rtc.Sec >23 ) )	return false;
	return true;
}
bool DS3231_GetTime(_RTC *rtc)
{
  uint8_t startAddr = DS3231_REG_TIME;
  uint8_t buffer[7] = {0,};

  if(HAL_I2C_Master_Transmit(i2c, DS3231_ADDR, &startAddr, 1, HAL_MAX_DELAY) != HAL_OK) return false;
  if(HAL_I2C_Master_Receive(i2c, DS3231_ADDR, buffer, sizeof(buffer), HAL_MAX_DELAY) != HAL_OK) return false;

  rtc->Sec = B2D(buffer[0] & 0x7F);
  rtc->Min = B2D(buffer[1] & 0x7F);
  rtc->Hour = B2D(buffer[2] & 0x3F);
  rtc->DaysOfWeek = buffer[3] & 0x07;
  rtc->Date = B2D(buffer[4] & 0x3F);
  rtc->Month = B2D(buffer[5] & 0x1F);
  rtc->Year = B2D(buffer[6]);

  return true;
}

bool DS3231_SetTime(_RTC *rtc)
{
  uint8_t startAddr = DS3231_REG_TIME;
  uint8_t buffer[8] = {startAddr, D2B(rtc->Sec), D2B(rtc->Min), D2B(rtc->Hour), rtc->DaysOfWeek, D2B(rtc->Date), D2B(rtc->Month), D2B(rtc->Year)};
  if(HAL_I2C_Master_Transmit(i2c, DS3231_ADDR, buffer, sizeof(buffer), HAL_MAX_DELAY) != HAL_OK) return false;

  return true;
}

bool DS3231_ReadTemperature(float *temp)
{
  uint8_t startAddr = DS3231_REG_TEMP;
  uint8_t buffer[2] = {0,};

  if(HAL_I2C_Master_Transmit(i2c, DS3231_ADDR, &startAddr, 1, HAL_MAX_DELAY) != HAL_OK) return false;
  if(HAL_I2C_Master_Receive(i2c, DS3231_ADDR, buffer, sizeof(buffer), HAL_MAX_DELAY) != HAL_OK) return false;

  int16_t value = (buffer[0] << 8) | (buffer[1]);
  value = (value >> 6);

  *temp = value / 4.0f;
  return true;
}

bool DS3231_SetAlarm1(uint8_t mode, uint8_t date, uint8_t hour, uint8_t min, uint8_t sec)
{
  uint8_t alarmSecond = D2B(sec);
  uint8_t alarmMinute = D2B(min);
  uint8_t alarmHour = D2B(hour);
  uint8_t alarmDate = D2B(date);

  switch(mode)
  {
  case ALARM_MODE_ALL_MATCHED:
    break;
  case ALARM_MODE_HOUR_MIN_SEC_MATCHED:
    alarmDate |= 0x80;
    break;
  case ALARM_MODE_MIN_SEC_MATCHED:
    alarmDate |= 0x80;
    alarmHour |= 0x80;
    break;
  case ALARM_MODE_SEC_MATCHED:
    alarmDate |= 0x80;
    alarmHour |= 0x80;
    alarmMinute |= 0x80;
    break;
  case ALARM_MODE_ONCE_PER_SECOND:
    alarmDate |= 0x80;
    alarmHour |= 0x80;
    alarmMinute |= 0x80;
    alarmSecond |= 0x80;
    break;
  default:
    break;
  }

  /* Write Alarm Registers */
  uint8_t startAddr = DS3231_REG_ALARM1;
  uint8_t buffer[5] = {startAddr, alarmSecond, alarmMinute, alarmHour, alarmDate};
  if(HAL_I2C_Master_Transmit(i2c, DS3231_ADDR, buffer, sizeof(buffer), HAL_MAX_DELAY) != HAL_OK) return false;

  /* Enable Alarm1 at Control Register */
  uint8_t ctrlReg = 0x00;
  ReadRegister(DS3231_REG_CONTROL, &ctrlReg);
  ctrlReg |= DS3231_CON_A1IE;
  ctrlReg |= DS3231_CON_INTCN;
  WriteRegister(DS3231_REG_CONTROL, ctrlReg);

  return true;
}

bool DS3231_ClearAlarm1()
{
  uint8_t ctrlReg;
  uint8_t statusReg;

  /* Clear Control Register */
  ReadRegister(DS3231_REG_CONTROL, &ctrlReg);
  ctrlReg &= ~DS3231_CON_A1IE;
  WriteRegister(DS3231_REG_CONTROL, ctrlReg);

  /* Clear Status Register */
  ReadRegister(DS3231_REG_STATUS, &statusReg);
  statusReg &= ~DS3231_STA_A1F;
  WriteRegister(DS3231_REG_STATUS, statusReg);

  return true;
}

bool ReadRegister(uint8_t regAddr, uint8_t *value)
{
  if(HAL_I2C_Master_Transmit(i2c, DS3231_ADDR, &regAddr, 1, HAL_MAX_DELAY) != HAL_OK) return false;
  if(HAL_I2C_Master_Receive(i2c, DS3231_ADDR, value, 1, HAL_MAX_DELAY) != HAL_OK) return false;

  return true;
}

bool WriteRegister(uint8_t regAddr, uint8_t value)
{
  uint8_t buffer[2] = {regAddr, value};
  if(HAL_I2C_Master_Transmit(i2c, DS3231_ADDR, buffer, sizeof(buffer), HAL_MAX_DELAY) != HAL_OK) return false;

  return true;
}

static uint8_t B2D(uint8_t bcd)
{
  return (bcd >> 4) * 10 + (bcd & 0x0F);
}

static uint8_t D2B(uint8_t decimal)
{
  return (((decimal / 10) << 4) | (decimal % 10));
}

uint16_t getCountdowntime(uint8_t hour, uint8_t min, uint8_t sec)
{
	_RTC curRTC;
	if (!DS3231_GetTime(&curRTC))	return 0;
	if ( hour < curRTC.Hour || hour - curRTC.Hour > 18 )	return 0;
	if ( hour == curRTC.Hour && min < curRTC.Min ) return 0;
	if ( hour == curRTC.Hour && min == curRTC.Min && sec < curRTC.Sec )	return 0;
	if( hour == curRTC.Hour && min == curRTC.Min)	{
		return sec - curRTC.Sec;
	}
	if (hour == curRTC.Hour)	{
		return (min - curRTC.Min)*60 + (60 - curRTC.Sec + sec);
	}
	else
		return (hour -curRTC.Hour - 1)* 3600 + (60 - curRTC.Min + min)*60 + (60 - curRTC.Sec + sec);

}
